<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<!--    TODO: Changer le logo -->
<!--    TODO: Vérifier le responsive via les contrainte-->

    <TextView
        android:id="@+id/title"
        android:layout_width="190dp"
        android:layout_height="39dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="36dp"
        android:fontFamily="@font/roboto"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="110dp"
        android:layout_height="103dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/title"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/party_maker_logo" />

    <Button
        android:id="@+id/button_create"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/roboto"
        android:text="@string/create"
        android:onClick="onBtnCreateClick"
        android:background="@drawable/round_shape_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/button_consult"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_marginTop="116dp"
        android:background="@drawable/round_shape_btn"
        android:fontFamily="@font/roboto"
        android:text="@string/consult"
        android:onClick="onBtnConsultClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_create" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/roboto"
        android:onClick="onBtnParameterClick"
        android:text="@string/settings"
        android:background="@drawable/round_shape_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_consult" />

</androidx.constraintlayout.widget.ConstraintLayout>