<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateEvent">

    <TextView
        android:id="@+id/title"
        android:layout_width="250dp"
        android:layout_height="97dp"
        android:fontFamily="@font/roboto"
        android:text="@string/create_event_one"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072" />

    <TextView
        android:id="@+id/fstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/roboto"
        android:text="@string/fstName"
        android:textColor="@color/black_clear"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/textFstName"
        android:layout_width="185dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toEndOf="@+id/fstName"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:ignore="LabelFor,MissingConstraints" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/roboto"
        android:text="@string/name"
        android:textColor="@color/black_clear"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fstName"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/textName"
        android:layout_width="185dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textFstName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/textFstName"
        tools:ignore="LabelFor,MissingConstraints" />

    <TextView
        android:id="@+id/mail"
        android:layout_width="81dp"
        android:layout_height="56dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/roboto"
        android:text="@string/mail"
        android:textColor="@color/black_clear"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/textMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/textName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/mail"
        app:layout_constraintTop_toBottomOf="@+id/textName"
        tools:ignore="LabelFor,MissingConstraints" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="136dp"
        android:background="@drawable/round_shape_btn"
        android:fontFamily="@font/roboto"
        android:onClick="onBtnNextClick"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMail" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/round_shape_btn"
        android:fontFamily="@font/roboto"
        android:onClick="onBtnCancelClick"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNext"
        app:layout_constraintVertical_bias="0.369" />
</androidx.constraintlayout.widget.ConstraintLayout>