<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings">

<!--    TODO: Création d'une méthode pour choisir la couleur -->
<!--    TODO: Vérifier l'adresse mail -->

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072" />

    <TextView
        android:id="@+id/fstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/roboto"
        android:text="@string/fstName"
        android:textColor="@color/black_clear"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/textFstName"
        android:layout_width="185dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toEndOf="@+id/fstName"
        app:layout_constraintTop_toBottomOf="@+id/settings"
        tools:ignore="LabelFor,MissingConstraints" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/roboto"
        android:text="@string/name"
        android:textColor="@color/black_clear"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fstName"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/textName"
        android:layout_width="185dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textFstName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/textFstName"
        tools:ignore="LabelFor,MissingConstraints" />

    <TextView
        android:id="@+id/mail"
        android:layout_width="81dp"
        android:layout_height="56dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/roboto"
        android:text="@string/mail"
        android:textColor="@color/black_clear"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/textMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/textName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/mail"
        app:layout_constraintTop_toBottomOf="@+id/textName"
        tools:ignore="LabelFor,MissingConstraints" />

    <TextView
        android:id="@+id/color"
        android:layout_width="97dp"
        android:layout_height="55dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/roboto"
        android:text="@string/changeColor"
        android:textColor="@color/black_clear"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/changeColor"
        android:layout_width="185dp"
        android:layout_height="45dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textMail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/color"
        app:layout_constraintTop_toBottomOf="@+id/textMail"
        tools:ignore="LabelFor,MissingConstraints" />

    <Button
        android:id="@+id/btnValidate"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/roboto"
        android:text="@string/validate"
        android:onClick="onBtnValidateClick"
        android:background="@drawable/round_shape_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/color" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto"
        android:onClick="onBtnCancelClick"
        android:text="@string/cancel"
        android:background="@drawable/round_shape_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnValidate"
        app:layout_constraintVertical_bias="0.067" />
</androidx.constraintlayout.widget.ConstraintLayout>