<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#BECFD517"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#BECFD517"
            android:onClick="onBtnList"
            android:contentDescription="@string/undo"
            android:src="?attr/actionModeCloseDrawable">

        </ImageButton>

        <TextView
            android:id="@+id/textSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/name_of_event"
            android:textColor="#6A000000"
            android:textSize="25sp"
            android:textStyle="italic">

        </TextView>

    </LinearLayout>

    <!-- Footer aligned to bottom -->
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_alignParentBottom="true"
        android:background="#C9AAAAAA"
        android:gravity="center">

        <Button
            android:id="@+id/button_event_home"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:backgroundTint="#BECFD517"
            android:drawableTop="@drawable/home"
            android:onClick="goHome"
            android:text="Accueil"
            android:textColor="@color/black"
            android:textSize="7sp"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/button_event_ardoise"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/button_event_home"
            android:backgroundTint="#122F3330"
            android:drawableTop="@drawable/calculator"
            android:onClick="goCalc"
            android:text="Ardoise"
            android:textColor="@color/black"
            android:textSize="7sp"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/button_event_invite"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/button_event_ardoise"
            android:backgroundTint="#122F3330"
            android:drawableTop="@drawable/letter"
            android:onClick="goInvite"
            android:text="Inviter"
            android:textColor="@color/black"
            android:textSize="7sp"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/button_event_settings"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/button_event_invite"
            android:backgroundTint="#122F3330"
            android:drawableTop="@drawable/settings"
            android:onClick="goSettings"
            android:text="Paramètre"
            android:textColor="@color/black"
            android:textSize="7sp"
            tools:ignore="HardcodedText" />

    </RelativeLayout>

    <!-- Content below header and above footer -->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/footer"
        android:layout_below="@id/header">

        <TextView
            android:id="@+id/textAcceuil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="accueil"
            android:textSize="20sp">

        </TextView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/textDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/date"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textEventDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/textDate"
                android:text="@string/la_date_du_calendrier"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textParticant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textDate"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/participants"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/ListViewParticipant"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_below="@+id/textParticant"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp">

            </ListView>

            <TextView
                android:id="@+id/textLieu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ListViewParticipant"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:text="Lieu "
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/affichageLieu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textLieu"
                android:layout_marginStart="25dp"
                android:text="25 Allée Claude Debussy, Le Mans"
                android:textSize="15sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textHeure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/affichageLieu"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:text="Heure "
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textHeureEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textHeure"
                android:layout_marginStart="25dp"
                android:text="-- : --"
                android:textSize="15sp"
                tools:ignore="HardcodedText" />

            <ImageView
                android:id="@+id/imageEvent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/textHeureEvent"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/beer"
                android:text="Importer Icone" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>